# oso

./: .bazelignore  .bazelrc  .clinerules  .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  .lintstagedrc  .sqlfluff  .sqlfluffignore  BUILD.bazel  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENTS.md  FUNDING.json  LICENSE  MODULE.bazel  README.md  README_optimism_query.md  REPO.bazel  SECURITY.md  artifacts_by_project_lineage.md  artifacts_lineage_github_issue.md  artifacts_lineage_index.md  boop.txt  complete_oso_workflow_example.py  dbt_project.yml  eslint.config.mjs  export_sqlmesh_images.sh  funding.json  lineage_comparison.md  manual-work-log.md  optimism_collection_sql.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prsync.py  pyoso.py  pyproject.toml  query_optimism_projects.py  (+9 more)
apps/docs/: .env.example  .env.local.example  .eslintrc.json  .gitignore  .prettierignore  BUILD.bazel  README.md  docusaurus.config.ts  eslint.config.mjs  package.json  plasmic.json
apps/docs/blog/: 2023-11-07-open-source-open-data-open-infra.mdx  2023-12-14-levels-of-the-game.mdx  2024-01-26-octant-epoch-02-ecosystem-analysis.mdx  2024-02-15-impact-data-scientists.mdx  2024-03-12-impact-data-scientists.mdx  2024-03-13-request-for-impact-metrics.md  2024-03-18-request-for-impact-metrics.md  2024-03-19-request-for-impact-metrics.md  2024-04-24-octant-epoch-03-ecosystem-analysis.md  2024-08-30-impact-data-scientists.mdx  authors.yml
apps/docs/docs/: about.md  index.md  index.mdx  subscribe.mdx
apps/docs/scripts/: test_js_snippets.mjs  test_python_snippets.py
apps/docs/src/: config.ts
apps/frontend/: .env.local.example  .eslintrc.json  .gitignore  BUILD.bazel  README.md  babel.config.testing.js  codegen.ts  eslint.config.mjs  jest.config.ts  jest.setup.ts  middleware.ts  next.config.js  package.json  plasmic-init-client.tsx  plasmic-init.ts  plasmic.json  robots.ts  supazod.config.json  supergraph-config.yaml  tailwind.config.js  tsconfig.json  vitest.config.ts
apps/frontend/.pyodide/: fake-import.js
apps/frontend/.storybook/: main.ts  preview.ts  vitest.setup.ts
apps/frontend/app/: BUILD.bazel  globals.css  layout.tsx  not-found.tsx  page.tsx
apps/frontend/lib/: BUILD.bazel  config.ts  dynamic-connectors.test.ts  dynamic-connectors.ts  index.ts  logger.ts  metrics-utils.ts  parsing.test.ts  parsing.ts  paths.ts  plasmic-register.ts  projects.ts  utils-server.ts
apps/frontend/osolint/: README.md  index.mjs  package.json
apps/frontend/public/: mockServiceWorker.js
apps/frontend/src/: data-source.ts
apps/frontend/supabase/: config.toml  seed.sql
cloudquery/dune-contract-usage/: pyproject.toml
cloudquery/dune-contract-usage/dune_contract_usage/: __init__.py  plugin.py  serve.py
cloudquery/dune-contract-usage/testdata/: config.yml
cloudquery/example-plugin/: pyproject.toml
cloudquery/example-plugin/example_plugin/: __init__.py
dbt/: .gitignore  README.md  dbt_project.yml  pyproject.toml
dbt/macros/: oso_artifact_id.sql  oso_id.sql  oso_source.sql  urlsafe_base64.sql
dbt/macros/models/: contract_invocation_daily_count.sql  contract_invocation_daily_l1_gas_used.sql  contract_invocation_daily_l2_gas_used.sql
dbt/models/: all_events.sql  all_events_by_project.sql  all_events_from_project.sql  all_events_monthly_from_artifact.sql  all_events_weekly_from_artifact.sql  all_events_weekly_from_project.sql  all_events_weekly_to_artifact.sql  all_events_weekly_to_project.sql  artifacts.sql  dune_sources.yml  github_commits.sql  github_distinct_main_commits.sql  github_events.sql  github_pull_request_merge_events.sql  github_pull_requests.sql  github_push_events.sql  github_sources.yml  github_stars_and_forks.sql  ossd_source.yml
dbt/models/playground/: README.md  dune__arbitrum_contract_usage.sql  dune__optimism_contract_usage.sql  ossd__collections.sql  ossd__projects.sql  ossd__repositories.sql
dbt/oso_dbt/: __init__.py
lib/oso-core/: README.md  pyproject.toml
lib/osoprotobufs/python/: README.md  pyproject.toml
lib/oss-artifact-validators/: .eslintrc.json  BUILD.bazel  jest.config.ts  package.json  tsconfig.json
lib/oss-artifact-validators/src/: BUILD.bazel  index.ts  test-real-endpoint.ts
lib/oss-artifact-validators/test/: test.ts
lib/query-rewriter/: README.md  pyproject.toml
lib/query-rewriter/queryrewriter/: __init__.py  defaults.py  dialect.py  errors.py  pandasutils.py  rewrite.py  test_rewrite.py  types.py
lib/utils/: .eslintrc.json  BUILD.bazel  README.md  package.json  tsconfig.json
lib/utils/src/: BUILD.bazel  common.ts  context.ts  index.ts  logger.ts
ops/external-prs/: .env.example  .eslintrc.json  .gitignore  BUILD.bazel  README.md  package.json  test.out  test_profiles.yaml  tsconfig.json
ops/external-prs/scripts/: rotate-service-account.sh
ops/opsscripts/: cli.py  pyproject.toml
warehouse/async-worker/: README.md  pyproject.toml
warehouse/asyncworker/: pyproject.toml
warehouse/meltano-setup/: README.md  meltano.yml  pyproject.toml
warehouse/metrics_tools/: Dockerfile  Dockerfile.test  README.md  cli.py  definition.py  evaluator.py  factory.py  intermediate.py  materialization.py  metrics_factories.py  models.py  pyproject.toml  renderer.py  runner.py  test_evaluator.py  test_factory.py  test_intermediate.py  test_runner.py  tester.py  utils.py
warehouse/oso_agent/: .env.example  .gitignore  README.md  main.py  pyproject.toml
warehouse/oso_dagster/: __init__.py  assets.py  cli.py  common.py  compile.py  config.py  constants.py  definitions.py  goldsky.py  goldsky_dask.py  interactive.py  pyproject.toml  schedules.py
warehouse/oso_lets_go/: README.md  cli.py  pyproject.toml  wizard.py
warehouse/oso_mcp/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
warehouse/oso_semantic/: README.md  pyproject.toml
warehouse/oso_sqlmesh/: README.md  config.py  pyproject.toml
warehouse/pynessie-gc/: .env.example  README.md  pyproject.toml
warehouse/pyoso/: README.md  pyproject.toml
warehouse/scheduler/: .env.local.example  README.md  pyproject.toml
(+4288 files in other folders)
