load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")

# gazelle:exclude .next
# gazelle:exclude **/node_modules
# gazelle:exclude .eslintrc.json
# gazelle:js_package_file package.json :node_modules
# gazelle:js_collect_barrels
# gazelle:js_root

package(default_visibility = ["//:__subpackages__"])

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_js",
)

gazelle_binary(
    name = "gazelle_js",
    languages = DEFAULT_LANGUAGES + [
        "@com_github_benchsci_rules_nodejs_gazelle//gazelle",
    ],
)

# # Create the root of the "virtual store" of npm dependencies under bazel-out.
# # This must be done in the package where the pnpm workspace is rooted.
npm_link_all_packages(name = "node_modules")

js_library(
    name = "package_json",
    srcs = ["package.json"],
)

js_library(
    name = ".eslintrc",
    srcs = [".eslintrc.js"],
)
