[project]
authors = [{ name = "Kariba Labs" }]
license = { text = "Apache-2.0" }
requires-python = "<3.13,<4.0,>=3.12"
dependencies = [
    "arrow<2.0.0,>=1.3.0",
    "click<9.0.0,>=8.1.7",
    "cloud-sql-python-connector[pg8000]<2.0.0,>=1.6.0",
    "duckdb<2.0.0,>=1.1.0",
    "lz4<5.0.0,>=4.3.3",
    "connectorx<1.0.0,>=0.4.0",
    "openrank-sdk<1.0.0,>=0.4.0",
    "pandas<3.0.0,>=2.2.3",
    "docker<8.0.0,>=7.1.0",
    "colorlog<7.0.0,>=6.9.0",
    "pyarrow-stubs>=17.16,<21.0",
    "structlog>=25.4.0",
    "pandas-gbq>=0.29.2",
    "oso-core",
    "pyoso",
    "metrics-service",
    "pandas-stubs>=2.3.2.250926",
    "oso_dagster",
    "opsscripts",
    "oso-lets-go",
    "websockets>=15.0.1",
    "scheduler",
]
name = "oso"
version = "1.0.0"
description = "Impact measurement for open source software"
readme = "README.md"

[project.urls]
homepage = "https://www.opensource.observer"
repository = "https://github.com/opensource-observer/oso"
documentation = "https://docs.opensource.observer/"

[dependency-groups]
dev = [
    "ipython>=8.21.0,<10.0.0",
    "shandy-sqlfmt[jinjafmt]<1.0.0,>=0.21.1",
    "isort>=7.0.0,<8.0.0",
    "ruff>=0.10.0",
    "ipykernel>=6.29.5",
    "python-on-whales>=0.76.1",
    "marimo>=0.13.15",
    "pytest<9.0.0,>=8.2.1",
    "pytest-asyncio>=0.24.0,<2.0.0",
]

[tool.uv.sources]
pyoso = { workspace = true }
oso-mcp = { workspace = true }
oso-core = { workspace = true }
metrics-service = { workspace = true }
scheduler = { workspace = true }
metrics-tools = { workspace = true }
oso_dagster = { workspace = true }
opsscripts = { workspace = true }
oso_lets_go = { workspace = true }
osoprotobufs = { workspace = true }

[tool.uv.workspace]
members = [
    "warehouse/oso_agent",
    "warehouse/oso_mcp",
    "warehouse/pyoso",
    "warehouse/metrics-service",
    "lib/oso-core",
    "warehouse/oso_semantic",
    "warehouse/scheduler",
    "lib/query-rewriter",
    "warehouse/oso_dagster",
    "warehouse/oso_sqlmesh",
    "warehouse/metrics_tools",
    "warehouse/oso_lets_go",
    "ops/opsscripts",
    "lib/osoprotobufs/python",
]

[tool.dagster]
module_name = "oso_dagster.definitions.default"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"
ignore = [
    "warehouse/oso_lets_go",
    "warehouse/oso_dagster/oso_dagster/dlt_sources/sql_database",
    "warehouse/scheduler/scheduler/graphql_client/async_base_client.py"
]

[tool.ruff]
exclude = [
    "warehouse/oso_lets_go",
    "warehouse/oso_dagster/oso_dagster/dlt_sources",
    "warehouse/oso_dagster/oso_dagster/dlt_sources/sql_database/**/*.py",
    "warehouse/oso_dagster/oso_dagster/dlt_sources/sql_database/*.py",
]

[tool.ruff.lint]
exclude = [
    "warehouse/oso_dagster/oso_dagster/dlt_sources/sql_database/**/*.py",
    "warehouse/oso_dagster/oso_dagster/dlt_sources/sql_database/*.py",
]

[tool.isort]
profile = "black"
