[tool.poetry]
name = "oso-dbt"
version = "0.1.0"
description = ""
authors = ["Kariba Labs"]
license = "Apache 2.0"
readme = "README.md"
packages = [{ include = "oso_dbt" }]

[tool.poetry.dependencies]
python = "^3.11"
dbt-bigquery = "^1.7.2"


[tool.poetry.group.dev.dependencies]
shandy-sqlfmt = {extras = ["jinjafmt"], version = "^0.21.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
