load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@aspect_rules_ts//ts:defs.bzl", "ts_config", "ts_project")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        ":node_modules/@docusaurus/tsconfig",
    ],
)

ts_project(
    name = "docs_ts",
    allow_js = True,
    no_emit = True,
    out_dir = "dist",
    preserve_jsx = True,
    transpiler = "tsc",
    tsconfig = ":tsconfig",
    deps = [
        ":node_modules/@docusaurus/core",
        ":node_modules/@docusaurus/preset-classic",
        ":node_modules/@docusaurus/theme-common",
        ":node_modules/@docusaurus/types",
        ":node_modules/@laxels/docusaurus-plugin-segment",
        ":node_modules/@mdx-js/react",
        ":node_modules/@plasmicapp/react-web",
        ":node_modules/@plasmicpkgs/antd5",
        ":node_modules/@plasmicpkgs/plasmic-basic-components",
        ":node_modules/clsx",
        ":node_modules/lodash",
        ":node_modules/prism-react-renderer",
        ":node_modules/react",
        ":node_modules/react-dom",
    ],
)
