[tool.poetry]
name = "example-plugin"
version = "1.0.0"
description = "Example CloudQuery Plugin"
authors = ["Kariba Labs"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "example_plugin" }]

[tool.poetry.dependencies]
python = "^3.11"
cloudquery-plugin-sdk = "^0.1.12"
requests = "^2.31.0"

[tool.poetry.scripts]
example_plugin = 'example_plugin.serve:run'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
