[project]
name = "oso-core"
version = "0.1.0"
description = "Common library for oso python projects"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OSO Team", email = "opensource-observer@googlegroups.com" }]
dependencies = [
    "arrow<2.0.0",
    "orjson>=3.10.18",
    "pydantic-settings>=2.11.0",
    "sqlmesh[trino]<1.0.0,>=0.141.1",
    "structlog>=25.4.0",
    "polyfactory",
]

[project.scripts]
oso-core-codegen = "oso_core.codegen.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.2.1,<10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
