load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "external_prs",
    declaration = True,
    declaration_map = True,
    out_dir = "dist",
    #srcs = ["src/index.ts"],
    #allow_js = True,
    resolve_json_module = True,
    transpiler = "tsc",
    tsconfig = "tsconfig.json",
)
