[project]
name = "async-worker"
version = "0.1.0"
description = "Async workers for OSO"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OSO Team", email = "opensource-observer@googlegroups.com" }]
dependencies = [
    "dotenv>=0.9.9",
    "google-cloud-pubsub>=2.33.0",
    "pydantic-cli>=10.0.0",
    "query-rewriter",
]

[tool.uv.sources]
query-rewriter = { workspace = true }
pyoso = { workspace = true }

[project.scripts]
worker = "async_worker.cli:cli"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.uv.build-backend]
module-name = "asyncworker"
module-root = ""
