[tool.poetry]
name = "meltano-setup"
version = "0.1.0"
description = "Meltano installation"
authors = ["Kariba Labs"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
meltano = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
