[tool.poetry]
name = "meltano-setup"
version = "0.1.0"
description = "Meltano installation"
authors = ["Kariba Labs"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
meltano = {extras = ["gcs"], version = "^3.3.2"}
psycopg = "^3.1.18"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
