[project]
name = "oso-agent"
version = "0.1.0"
description = "Multi-agent framework for Open Source Observer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OSO Team", email = "opensource-observer@googlegroups.com" }]
dependencies = [
    "llama-index>=0.12.29",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-tools-mcp>=0.1.1",
]

[tool.uv.sources]
pyoso = { workspace = true }
