[project]
name = "oso-agent"
version = "0.1.0"
description = "Multi-agent framework for Open Source Observer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OSO Team", email = "opensource-observer@googlegroups.com" }]
dependencies = [
    "arize-phoenix-otel>=0.9.1",
    "dotenv>=0.9.9",
    "llama-index>=0.12.29",
    "llama-index-llms-gemini>=0.4.14",
    "llama-index-llms-google-genai>=0.1.12",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-tools-mcp>=0.1.1",
    "openinference-instrumentation-llama-index>=4.2.0",
]

[tool.uv.sources]
pyoso = { workspace = true }

[project.scripts]
agent = "oso_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
