[project]
name = "oso-agent"
version = "0.1.0"
description = "Multi-agent framework for Open Source Observer"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OSO Team", email = "opensource-observer@googlegroups.com" }]
dependencies = [
    "arize-phoenix-otel==0.10.1",
    "arize-phoenix[evals]==10.1.0",
    "discord-py>=2.5.2",
    "dotenv>=0.9.9",
    "llama-index>=0.12.29",
    "llama-index-embeddings-google-genai>=0.2.0",
    "llama-index-embeddings-ollama>=0.6.0",
    "llama-index-llms-google-genai>=0.1.12",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-tools-mcp>=0.1.1",
    "openinference-instrumentation-llama-index>=4.3.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "sqlglot[rs]>=26.16.4",
    "uvicorn[standard]>=0.34.2",
]

[tool.uv.sources]
pyoso = { workspace = true }

[project.scripts]
agent = "oso_agent.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
