[project]
name = "oso-mcp"
version = "0.1.0"
description = "The Open Source Observer MCP server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Javier Ríos", email = "javi@karibalabs.co" }]
dependencies = [
    "pydantic>=2.10.6",
    "pyoso",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "httpx>=0.27.0",
    "fastmcp>=2.13.0.2",
    "uvicorn>=0.35",
]

[tool.uv.sources]
pyoso = { workspace = true }

[project.scripts]
mcp = "oso_mcp.cli:cli"
oso_mcp = "oso_mcp.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
