[project]
name = "oso-semantic"
version = "0.1.1"
description = ""
readme = "README.md"
authors = [{ name = "OSO Team", email = "opensource-observer@googlegroups.com" }]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.11.6",
    "sqlglot>=26.16.4",
    "sqlmesh>=0.178.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "duckdb>=1.3.0",
    "pytest>=8.4.0",
]
