[project]
name = "oso-semantic"
version = "0.1.3a1"
description = ""
readme = "README.md"
authors = [{ name = "OSO Team", email = "opensource-observer@googlegroups.com" }]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.10.5",
    "sqlglot>=26.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "duckdb>=1.3.0",
    "pandas>=2.3.0",
    "pip>=25.2",
    "pyodide-build>=0.30.7",
    "pytest>=8.4.0",
    "pytest-pyodide>=0.58.6",
]
