[project]
name = "oso-sqlmesh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "sqlmesh[trino]<1.0.0,>=0.141.1",
    "metrics-tools",
    "duckdb>=1.4.1",
    "python-dotenv>=1.1.1",
]

[tool.uv.sources]
metrics-tools = { workspace = true }
