[project]
name = "pyoso"
version = "0.4.0"
description = ""
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Icaro Guerra", email = "icaro@karibalabs.co" }
]
dependencies = [
    "pandas>=1.2.0",
    "sqlglot>=26.16.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pandas-stubs>=2.2.3.250308",
]
